# dicom-toolkit

./: .gitignore  README.md  package-lock.json  pyproject.toml
config/: destinations.example.json  study-map.example.csv
scripts/modify/: study_clone.py
src/dicom_toolkit/: cli.py
src/dicom_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
